exports[`test Child nodes 1`] = `
"<div class=\"pe-list pe-list--borders\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Dark tone class + light tone 1`] = `
"<div style=\"background: rgb(255, 255, 255);\" class=
\"pe-list pe-list--borders pe-list--header pe-light-tone\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Dark tone class + light tone class 1`] = `
"<div style=\"background: rgb(255, 255, 255);\" class=
\"pe-list pe-list--borders pe-list--header pe-light-tone\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test No options 1`] = `
"<div class=\"pe-list\"></div>
"
`;

exports[`test Option: class -- dark tone class 1`] = `
"<div class=\"pe-list pe-list--borders pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: class 1`] = `
"<div class=\"pe-list class-x\"></div>
"
`;

exports[`test Option: className 1`] = `
"<div class=\"pe-list className-x\"></div>
"
`;

exports[`test Option: compact 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--header pe-list--compact\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: element 1`] = `
"<a class=\"pe-list\"></a>
"
`;

exports[`test Option: id 1`] = `
"<div id=\"id-x\" class=\"pe-list\"></div>
"
`;

exports[`test Option: style (colors) 1`] = `
"<div style=
\"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255);\"
class=\"pe-list pe-list--header\">
  <div style=\"color: rgba(255, 255, 255, 0.8);\" class=
  \"pe-list-tile pe-list__header\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgba(255, 255, 255, 0.8);\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          One
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          Two
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          Three
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: tiles 1`] = `
"<div class=\"pe-list pe-list--borders\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Options: header, tiles with urls 1`] = `
"<div class=\"pe-list pe-list--borders pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a>
  </div>
</div>
<div class=\"pe-list pe-list--borders pe-list--header\">
  <div class=\"pe-list-tile pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
    <div class=
    \"pe-list-tile__content pe-list-tile__content--front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a>
  </div>
</div>
"
`;

exports[`test Options: header, tiles, indent, indentedBorders 1`] = `
"<div class=\"pe-list pe-list--indented-borders pe-list--header\">
  <div class=\"pe-list-tile pe-list-tile--front pe-list__header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Options: header.sticky 1`] = `
"<div class=\"scrollable-list\">
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader 0
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader 1
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader 2
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader 3
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header\">
    <div class=\"pe-list-tile pe-list-tile--sticky pe-list__header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Subheader 4
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=\"pe-list-tile pe-list-tile--subtitle\">
      <a href=\"#!/\" class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content--front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
</div>
"
`;

exports[`test Themed list (colors and padding) -- dark tone class 1`] = `
"<div class=\"pe-list pe-list--borders tests-lists-themed-list\">
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Themed list (colors and padding) 1`] = `
"<div class=\"pe-list pe-list--borders tests-lists-themed-list\">
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
